--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Simple pages site template
+title: Tiko's page
 description: >- # this means to ignore newlines until "baseurl:"
-  Simple pages site template description.
+  Pages with my work.
 
 # Note: configuring the following options might make it hard to get your
 # page working on both GitHub and locally.
@@ -23,9 +23,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 # url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Customize these:
-email: my initials at alum.mit.edu
-twitter_username: pdg137
-github_username:  pdg137
+email: tikopgrayson@gmail.com
 
 # Build settings
 markdown: kramdown
@@ -35,7 +33,6 @@ plugins:
 
 # Pages to show in header
 header_pages:
-  - pages/example/index.md
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
